fix(module:alert): padding for overlapping close button

--- a/components/alert/style/index.less
+++ b/components/alert/style/index.less
@@ -111,6 +111,11 @@
     font-size: @font-size-base;
   }
 
+  &-message {
+    display: block;
+    padding-right: 16px;
+  }
+
   &-with-description &-message {
     font-size: @font-size-lg;
     color: @alert-message-color;
